Some Download link changed

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,15 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/0.aeac4b60716b6c0cf500.hot-update.js": "/0.aeac4b60716b6c0cf500.hot-update.js",
+    "/0.349454b9605605517e53.hot-update.js": "/0.349454b9605605517e53.hot-update.js",
+    "/0.7e840ae633a6e910e01a.hot-update.js": "/0.7e840ae633a6e910e01a.hot-update.js",
+    "/0.be14476a59b3b33a4ba1.hot-update.js": "/0.be14476a59b3b33a4ba1.hot-update.js",
+    "/0.9d4d9298ef60b0948880.hot-update.js": "/0.9d4d9298ef60b0948880.hot-update.js",
+    "/0.bd7b8dd1b10a3d9f22b9.hot-update.js": "/0.bd7b8dd1b10a3d9f22b9.hot-update.js",
+    "/0.0ae6667e06758ffdca2b.hot-update.js": "/0.0ae6667e06758ffdca2b.hot-update.js",
+    "/0.71a152055d30b7c9d1f5.hot-update.js": "/0.71a152055d30b7c9d1f5.hot-update.js",
+    "/0.78086d9bae3cf39487ad.hot-update.js": "/0.78086d9bae3cf39487ad.hot-update.js",
+    "/0.649274a5e5a1f546fcbf.hot-update.js": "/0.649274a5e5a1f546fcbf.hot-update.js",
+    "/0.a87ed189dba200398f1d.hot-update.js": "/0.a87ed189dba200398f1d.hot-update.js"
 }
